# paint-cpp

./: CMakeLists.txt  boiler.txt  readme.md  skibidi.cpp  todo.txt  window.txt
src/: glad.c  glad.h  main.cpp
src/Classes/brush/: brush.cpp  brush.hpp
src/Classes/button/: button.cpp  button.hpp
src/Classes/color/: color.cpp  color.hpp
src/Classes/pixel/: pixel.cpp  pixel.hpp
src/Classes/render/: render.cpp  render.hpp
src/Classes/screen/: screen.cpp  screen.hpp
src/Classes/tasks/: tasks.cpp  tasks.hpp
src/Classes/tool/: tool.cpp  tool.hpp
src/Classes/uicomponent/: uicomponent.cpp  uicomponent.hpp
src/Classes/vector2/: vector2.cpp  vector2.hpp
src/Classes/window/: window.cpp  window.hpp
src/Enums/: events.hpp
src/Shaders/: fragment.hpp  vertex.hpp
